fixed bottom of queue so it (basically) is aligned with the bottom of the content area

--- a/assets/styles/customStylesheet.css
+++ b/assets/styles/customStylesheet.css
@@ -18,6 +18,7 @@
 
 .col-sm-4{
 	background-color:#E6E6EA;
+	margin-bottom:23px;
 }
 
 .col-sm-8{
